// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF bCiabC sc-gKsewC ijcSYt"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
      <div
        class="sc-iBPRYJ gvzchn"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#B3BAC1"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-iqHYGH hWETzC"
  >
    <div
      class="sc-kEjbxe kylNHj"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-fubCfw esISzL"
      >
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF ciPuqS sc-gKsewC ijcSYt"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
      <div
        class="sc-iBPRYJ gvzchn"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#FDFEFF"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-iqHYGH jYfSdi"
  >
    <div
      class="sc-crrsfI kTSDKm sc-dQppl gabPPy fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-kEjbxe kylNHj"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-fubCfw esISzL"
      >
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF ifYubB sc-eCssSg eZdWdg"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
    </button>
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF ifYubB sc-jSgupP pjuOx"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      <div
        class="sc-iBPRYJ gvzchn"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#B3BAC1"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-iqHYGH hWETzC"
  >
    <div
      class="sc-kEjbxe kylNHj"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-fubCfw esISzL"
      >
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF kmMnXp sc-eCssSg eZdWdg"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
    </button>
    <button
      class="sc-gsTCUz sc-dlfnbm drHOmF kmMnXp sc-jSgupP pjuOx"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      <div
        class="sc-iBPRYJ gvzchn"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#FDFEFF"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-iqHYGH jYfSdi"
  >
    <div
      class="sc-crrsfI kTSDKm sc-dQppl gabPPy fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-kEjbxe kylNHj"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-fubCfw esISzL"
      >
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-jrAGrp fQySwu"
          color="#EFF1F2"
          orientation="horizontal"
        />
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-pFZIQ brtMAP"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
